--- a/index.html
+++ b/index.html
@@ -5,43 +5,12 @@
   <title>Workout Display</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      font-family: sans-serif;
-      background-color: #111;
-      color: white;
-      padding: 20px;
-    }
-    .class-block {
-      border: 1px solid #333;
-      margin-bottom: 20px;
-      padding: 20px;
-      background-color: #222;
-      border-radius: 8px;
-    }
-    .class-header {
-      font-size: 3em;
-      margin-bottom: 10px;
-      text-align: center;
-      text-transform: uppercase;
-      border-bottom: 1px solid #555;
-      padding-bottom: 10px;
-    }
-    .section {
-      margin-bottom: 48px;
-    }
-    .section-title {
-      font-weight: bold;
-      font-size: 1.8em;
-      color: #fff;
-      border-bottom: 1px solid #555;
-      padding-bottom: 4px;
-    }
-    .workout {
-      font-size: 1.5em;
-      display: flex;
-      justify-content: space-between;
-      padding: 3px 0;
-    }
+    body { font-family: sans-serif; background-color: #111; color: white; padding: 20px; }
+    .class-block { border: 1px solid #333; margin-bottom: 20px; padding: 20px; background-color: #222; border-radius: 8px; }
+    .class-header { font-size: 3em; margin-bottom: 10px; text-align: center; text-transform: uppercase; border-bottom: 1px solid #555; padding-bottom: 10px; }
+    .section { margin-bottom: 48px; }
+    .section-title { font-weight: bold; font-size: 1.8em; color: #fff; border-bottom: 1px solid #555; padding-bottom: 4px; }
+    .workout { font-size: 1.5em; display: flex; justify-content: space-between; padding: 3px 0; }
   </style>
 </head>
 <body>
@@ -49,13 +18,13 @@
   <div id="classes"></div>
 
   <script>
-    // Direct CSV download URLs for your OneDrive workbook tabs
+    // Raw GitHub URLs (CORS-friendly)
     const csvUrls = {
-      schedule: "https://onedrive.live.com/download?cid=CB13DF129A4A254C&resid=CB13DF129A4A254C%21seed0922bad0841f1ac4283202a612ad9&format=csv&sheet=Schedule",
-      Adult:    "https://onedrive.live.com/download?cid=CB13DF129A4A254C&resid=CB13DF129A4A254C%21seed0922bad0841f1ac4283202a612ad9&format=csv&sheet=Adult",
-      Devo:     "https://onedrive.live.com/download?cid=CB13DF129A4A254C&resid=CB13DF129A4A254C%21seed0922bad0841f1ac4283202a612ad9&format=csv&sheet=Devo",
-      Rookie:   "https://onedrive.live.com/download?cid=CB13DF129A4A254C&resid=CB13DF129A4A254C%21seed0922bad0841f1ac4283202a612ad9&format=csv&sheet=Rookie",
-      Prep:     "https://onedrive.live.com/download?cid=CB13DF129A4A254C&resid=CB13DF129A4A254C%21seed0922bad0841f1ac4283202a612ad9&format=csv&sheet=Prep"
+      schedule: "https://raw.githubusercontent.com/evdventures/D1_OneDrive/main/Schedule.csv",
+      Adult:    "https://raw.githubusercontent.com/evdventures/D1_OneDrive/main/Adult.csv",
+      Devo:     "https://raw.githubusercontent.com/evdventures/D1_OneDrive/main/Devo.csv",
+      Rookie:   "https://raw.githubusercontent.com/evdventures/D1_OneDrive/main/Rookie.csv",
+      Prep:     "https://raw.githubusercontent.com/evdventures/D1_OneDrive/main/Prep.csv"
     };
 
     let classIndex = 0;
@@ -74,10 +43,7 @@
 
     function getCurrentDayTime() {
       const now = new Date();
-      return {
-        day: now.toLocaleString('en-US',{ weekday:'long' }),
-        time: now.toTimeString().slice(0,5)
-      };
+      return { day: now.toLocaleString('en-US',{ weekday:'long' }), time: now.toTimeString().slice(0,5) };
     }
 
     function isActive(start, end, now) {
@@ -86,30 +52,19 @@
 
     async function loadSchedule() {
       const rows = await fetchCsv(csvUrls.schedule);
-      // Expect columns: Class, Day, Start Time, End Time
-      return rows.slice(1).map(r => ({
-        name: r[0].trim(),
-        day: r[1].trim(),
-        start: normalizeTime(r[2].trim()),
-        end: normalizeTime(r[3].trim())
-      }));
+      return rows.slice(1).map(r => ({ name: r[0].trim(), day: r[1].trim(), start: normalizeTime(r[2].trim()), end: normalizeTime(r[3].trim()) }));
     }
 
     async function loadWorkoutsForClass(className) {
       const url = csvUrls[className];
       const rows = await fetchCsv(url);
-      // Assume first row: Section, Monday, Tuesday, ... Saturday
       const headers = rows[0].map(h => h.trim());
       const dayIdx = headers.findIndex(h => h.toLowerCase() === getCurrentDayTime().day.toLowerCase());
       const sections = [];
       for (let i = 1; i < rows.length; i++) {
-        const section = rows[i][0].trim();
-        if (!section) continue;
+        const section = rows[i][0].trim(); if (!section) continue;
         const cell = rows[i][dayIdx] || '';
-        const workouts = cell.split(';').map(item => {
-          const [name, reps] = item.split('|').map(s => s.trim());
-          return { name, reps: reps || '' };
-        }).filter(w => w.name);
+        const workouts = cell.split(';').map(item => { const [name, reps] = item.split('|').map(s => s.trim()); return { name, reps: reps || '' }; }).filter(w => w.name);
         sections.push({ title: section, workouts });
       }
       return sections;
@@ -131,9 +86,7 @@
       let html = `<div class="class-block"><div class="class-header">${cls.name} (${cls.start} - ${cls.end})</div>`;
       for (const sec of sections) {
         html += `<div class="section"><div class="section-title">${sec.title}</div>`;
-        for (const w of sec.workouts) {
-          html += `<div class="workout"><span>${w.name}</span><span>${w.reps}</span></div>`;
-        }
+        for (const w of sec.workouts) html += `<div class="workout"><span>${w.name}</span><span>${w.reps}</span></div>`;
         html += '</div>';
       }
       html += '</div>';
